@@ -3047,3 +3047,29 @@ Commit `a096dd7`'s V3 migration calls `setval('admin_audit_events_chain_seq', CO
 - mount 后 1.5s 起对当前角色全部菜单项序贯静默预取（120ms 步进；卸载清定时器）。
 
 **验证**：单测 4/4（悬停一次去重/聚焦/空闲全量/滚动重置与 query 豁免）；全量 **299/299**；typecheck 三配置 + 改动文件 eslint 干净。**浏览器实测**（mock 控制面 + dev 服务器）：滚动 500→0 且滚动能力保留；挂载后 1.5s 空闲窗口内悬停 → 700ms 内目标 chunk 抵达（资源计时 2 条=模块+样式）；未交互页面（资料）被空闲预取自动加载。
+## 2026-09-16 午后 — Goal #656：页面级「使用指引」——UiPageGuide + 六个重点管理页（对标腾讯产品指南）
+
+**背景**：跟踪 issue #656（「控制台对标腾讯 AI 网关」P0 第一批；同批 #657 列表依赖计数与表单规则文案、#658 API 消费者 JWT 入口另立）。腾讯控制台每个管理页顶部都有「产品指南/操作指引」，把跨页链路写成 3–4 步卡片；我们此前全站唯一编号引导只在「我的密钥」空态里，链路知识是隐性的。
+
+**交付**（分支 feat/page-guides-656，隔离工作树 D:/tmp/miqro-guides，base develop@807c567c）：
+- 新组件 `frontend/src/ui/PageGuide.vue`（barrel 导出 UiPageGuide）：页头下方「使用指引」卡——3–4 步，每步 = 序号 + 动宾标题 + 一句话 + 「前往『X』」跨页路由链接（可选 GitHub 文档直链，沿用 #651 模式）；「收起」（细条）/「不再显示」按页持久化（localStorage，setup 同步读取避免闪烁；storage 不可用静默降级）。
+- 内容模块 `frontend/src/content/pageGuides.ts`：六页文案——供应商「接入一家新供应商」、上游凭证「三步用起来」、API 消费者「外部系统接入四步」、我的密钥「从零到调用四步」、授权「授权四步」、项目「项目四步」。涉及生效语义的步骤明写「保存后数秒内生效，无需同步」（快照自动刷新，不引入腾讯式手动同步动作）；凭证指引写明「轮换后所有引用方自动使用新版本」。
+- 六页接入 + `ui/index.ts` barrel；EN 词典 +83 条；`frontend-design.md` §6 增补 PageGuide 规范段。
+
+**验证**：
+- vitest 全量 294/294（新增 `PageGuide.spec.ts` 5 例：渲染与链接、收起记忆、隐藏、内容守卫——to 必配 toText、/app 前缀、文档仅 https github；`NextCredentialsView.spec` 增指引断言）。
+- vue-tsc（app/spec/node 三工程）PASS；eslint（仅本轮改动 11 文件，--fix）PASS；vite build PASS。
+- Playwright e2e 52/52 PASS（生产构建 + preview，4 视口；含全部管理页 baseline 与 forbidden-aesthetics 审计；截图 frontend/test-results/baseline/）。
+
+**边界**：不加同步动作/状态列（无实例层）；e2e 用例与金样未动（截图仅捕获，无像素对比）；#657/#658 为同方案后续批。
+
+## 2026-09-16 午后 — 部署件固化 #677：2G 演示机 JVM/内存调优回流 compose.prod.yaml
+
+**背景**：演示机控制台内存告警 95%+（同日 #663/#667/#668 事故窗口定性：12:15–12:32 构建峰值 97.5%、日常常驻 ~85%）。午后完成实测瘦身，但改动只落在服务器 compose（配置漂移，整树刷新即回退）。瘦身时开启 GC 日志实测：control-plane 堆存活仅 ~69MB、gateway ~24MB——原 512m/640m 默认值与镜像 ENTRYPOINT 兜底的 `-XX:MaxRAMPercentage=75`（768m）均严重超配；JVM RSS 大头是 metaspace（86MB）+ code cache + 线程（Spring Boot 固有）。附带实证：`-Xmx` 优先于 `-XX:MaxRAMPercentage`（MaxHeapSize 非默认则百分比分支跳过），二者不竞争。
+
+**交付**（分支 chore/compose-prod-tuning-677，仅 `deploy/compose.prod.yaml`）：
+- control-plane `-Xmx512m→448m`、gateway `-Xmx640m→384m`，均加 `-XX:+UseSerialGC` 与 `-Xlog:gc*:file=/tmp/gc.log:time,uptime:filecount=2,filesize=5m`；
+- postgres `shared_buffers` 默认 64MB（`POSTGRES_SHARED_BUFFERS` 覆盖；共享内存不可回收，调小后余量转为可回收内核页缓存）；
+- 留痕消费端（`MIQROKEY_RETENTION_CONSUMER_*`）与响应缓存（`MIQROKEY_CACHE_ENABLED`）开关环境变量化（默认关）——消除服务器手改 compose 的漂移来源，仓库默认行为不变。
+
+**验证**：`docker compose -f deploy/compose.prod.yaml config` 通过（本机 v5.1.4；渲染的 JAVA_TOOL_OPTIONS/shared_buffers 与服务器实测目标逐字一致）。服务器侧（2G 演示机）已按目标态运行并验证：swap 899→85MB、dockerd RSS 317→97MB、控制台常驻口径 85%→~60%、全栈 healthy、登录 `/api/v1/auth/login` 200、PSI=0、零 OOM；服务器 `.env` 已补齐对应开关值（cache / 留痕消费端 / COMPOSE_PROFILES）。
